<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/first_line"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/description"
            android:textAlignment="center"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:gravity="center"
            android:id="@+id/item_name"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/price"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:gravity="center"
            android:id="@+id/item_price"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aggiungi"
            android:id="@+id/plus"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/quantità"
            android:gravity="center"
            android:paddingRight="10dp"
            android:paddingLeft="10dp"
            android:id="@+id/item_number"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/diminuisci"
            android:id="@+id/minus"/>

    </LinearLayout>

</LinearLayout>